# lab-meeting-kaggle-titanic

./: .gitignore  README.md  pyproject.toml
src/: randomforest.py  train.py
src/features/: age.py  base.py  embarked.py  fare.py  pclass.py
