[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["4nemi <4nemi.aaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
feather-format = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
